--- a/dir_win.yml
+++ b/dir_win.yml
@@ -1,10 +1,11 @@
 ---
 - name: win_file module demo
   hosts: all
+  become: false
   vars:
     mydir: 'C:\Tmp\dupa'
   tasks:
-  - name: Create a directory 
-    ansible.windows.win_file:
-      path: "{{  mydir  }}"
-      state: directory
+    - name: Create a directory 
+      win_file:
+        path: "{{  mydir  }}"
+        state: directory
