--- a/lineinfile_win.yml
+++ b/lineinfile_win.yml
@@ -3,7 +3,11 @@
   hosts: all
   become: false
   tasks:
-    - name: Insert path without converting \r\n
+    - name: Insert settings NRPE
       win_lineinfile:
         path: c:\Program Files\NSClient++\nsclient.ini
-        line: chuj
+        insertafter: '[/settings/NRPE/server]'
+        line: '{{ item }}'
+      with_items:
+        - '; # DH KEY'
+        - 'dh = ${certificate-path}/nrpe_dh_2048.pem'
