--- a/lineinfile_win.yml
+++ b/lineinfile_win.yml
@@ -7,6 +7,7 @@
       win_lineinfile:
         path: c:\Program Files\NSClient++\nsclient.ini
         insertafter: '[/settings/NRPE/server]'
+        insertbefore: '[/modules]'
         line: '{{ item }}'
       with_items:
         - '; # DH KEY'
