--- a/lineinfile_win.yml
+++ b/lineinfile_win.yml
@@ -6,8 +6,8 @@
     - name: Insert settings NRPE
       win_lineinfile:
         path: c:\Program Files\NSClient++\nsclient.ini
-        regex: 'settings/NRPE/server'
         insertafter: '[/settings/NRPE/server]'
+        insertbefore: '[/modules]'
         line: '{{ item }}'
       with_items:
         - '; # DH KEY'
