--- a/copy_win.yml
+++ b/copy_win.yml
@@ -6,4 +6,4 @@
       win_copy:
         src: /root/plays/b4.pem
         dest: C:\Temp\renamed-foo.conf
-        remote_src: yes
+#        remote_src: yes
