--- a/copy_win.yml
+++ b/copy_win.yml
@@ -1,11 +1,10 @@
 ---
 - name: copy pem
   hosts: all
-#  become: true
+  become: true
   tasks:
     - name: Copy a single file
       copy:
         src: /tmp/b4.pem
-        
         dest: C:\Temp\renamed-foo.conf
 #        remote_src: yes
