--- a/copy_win.yml
+++ b/copy_win.yml
@@ -3,6 +3,7 @@
   hosts: all
   become: yes
   become_method: runas
+  become_user: Administrator
   tasks:
     - name: Copy a single file
       copy:
