--- a/nscp_play.yml
+++ b/nscp_play.yml
@@ -4,7 +4,7 @@
   become: false
   vars:
     source: "/tmp/b4.pem"
-    destination: C:\Program Files\NSClient++\security
+    destination: C:\Program Files\NSClient++\security\
   tasks:
     - name: Insert settings NRPE
       win_lineinfile:
